# basemoncoin

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  configure.ac  libbasemoncoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  basemoncoin.sln  basemoncoin_config.h  msvc-autogen.py
contrib/: README.md  basemoncoin-pos-cli.bash-completion  basemoncoin-pos-qt.pro  basemoncoin-pos-tx.bash-completion  basemoncoin-posd.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  basemoncoin-conf.md  basemoncoin-pos-conf.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  basemoncoin-cli.1  basemoncoin-qt.1  basemoncoin-tx.1  basemoncoin-wallet.1  basemoncoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  amount.h  basemoncoin-cli-res.rc  (+39 more)
(+462 files in other folders)
